infra/kubernetes/apps/currencies-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencies-service
  namespace: banking-system
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  replicas: 1
  selector:
    matchLabels:
      app: currencies-service
  template:
    metadata:
      labels:
        app: currencies-service
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: currencies-service
          image: ghcr.io/l1ngq/banking-currencies:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 2
