infra/kubernetes/apps/currencies-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currencies-service
  namespace: banking-system
spec:
  selector:
    app: currencies-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
